@@ -1,6 +1,7 @@
 Development Portal (2024-01-23 shi)
 ==============================
 Update Contact Publisher link
+Update footer displaying contact publisher link
 
 
 Development Portal (2024-01-19 shi)
